fixed database things